syntax = "proto3";

package messages.user;

option go_package = "farm/src/proto/messages/user";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message User {
  string username = 1;
  string phone = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
}
